# reproducible-cuda-scipy-2026

./: LICENSE  README.md
combined-build/: .gitignore  README.md  pixi.toml
combined-build/src/cuda-brot/: CMakeLists.txt  README.md  pixi.toml
combined-build/src/cuda-brot/src/: main.cu
combined-build/src/cutile-brot/: README.md  pixi.toml  pyproject.toml
combined-build/src/cutile-brot/src/cutile_brot/: __init__.py  mandelbrot.py
my-project/: pixi.toml
